add hardware iic

--- a/Project/Project/Objects/Project.build_log.htm
+++ b/Project/Project/Objects/Project.build_log.htm
@@ -27,19 +27,10 @@ Project File Date:  06/25/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\keil\install\ARM\ARMCC\Bin'
 Build target 'Project'
-compiling main.c...
-..\Main\main.c(8): warning:  #550-D: variable "get_sysclk"  was set but never used
-  	static int get_sysclk;
-..\Main\main.c(9): warning:  #177-D: variable "sys_test"  was declared but never referenced
-  		static int sys_test=0;
-..\Main\main.c(10): warning:  #177-D: variable "RCC_value"  was declared but never referenced
-  	static long int RCC_value;
-..\Main\main.c(13): warning:  #550-D: variable "time"  was set but never used
-  	static  long int time;
-..\Main\main.c: 4 warnings, 0 errors
+compiling LED.c...
 linking...
 Program Size: Code=3348 RO-data=484 RW-data=60 ZI-data=1028  
-".\Objects\Project.axf" - 0 Error(s), 4 Warning(s).
+".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -53,7 +44,7 @@ Package Vendor: Keil
   E:\keil\install\ARM\PACK\Keil\STM32F4xx_DFP\2.13.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
